# print_studio

./: README.md  license.txt  pyproject.toml  requirements.txt
print_studio/: api.py  hooks.py  importer.py  modules.txt  patches.txt
print_studio/patches/: remove_legacy_workspace.py
print_studio/print_studio/doctype/print_studio_layout/: print_studio_layout.js  print_studio_layout.json  print_studio_layout.py
print_studio/print_studio/page/print_studio/: print_studio.js  print_studio.json
print_studio/public/: designer.html
